<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search_label">search...</string>
    <string name="search_hint">word</string>
    <string name="language">language</string>
    <string name="toast_nocards">no cards in box</string>
    <string name="app_name">VoBox</string>
    <string name="example_word">EXAMPLEWORDT</string>
    <string name="toast_newcard">new card added</string>
    <string name="toast_savedchanges">Changes saved.</string>
    <string name="sort">sort</string>
    <string name="question_sort">How to sort?</string>
    <string name="lang_german">German</string>
    <string name="lang_swedish">Swedish</string>
    <string name="lang_english">English</string>
    <string name="label_save">save</string>
    <string name="label_add">add</string>
    <string name="label_edit_dict">edit dictionary</string>
    <string name="label_new_dict">new dictionary</string>
    <string name="toast_name_used">Name is taken.</string>
    <string name="toast_dict_renamed">dictionary renamed to \'%1$s\'</string>
    <string name="toast_dict_not_renamed">Could not rename dictionary.</string>
    <string name="toast_new_dict_saved">add new dictionary \'%1$s\'</string>
    <string name="toast_edit_dict_saved">saved changes to dictionary \'%1$s\'</string>
    <string name="toast_deleted_dict">deleted dictionary \'%1$s\'</string>
    <string name="toast_integrated">successfully merged into dictionary \'%1$s\'</string>
    <string name="toast_nocards_found">no cards found</string>
    <string name="import_dict">import dictionary</string>
    <string name="question_how_import">how should the dictionary be imported?</string>
    <string name="label_as_new">as new dictionary</string>
    <string name="toast_dict_not_created">Could not create dictionary.</string>
    <string name="label_integrate_dict">merge into dictionary</string>
    <string name="toast_error_import">Could not read the dictionary.</string>
    <string name="toast_error_samelanguage">Please, choose two different languages. These changes were not stored.</string>
    <string name="checked">tested</string>
    <string name="toast_already_checked">already tested</string>
    <string name="toast_card_up">card up</string>
    <string name="toast_card_down">card down</string>
    <string name="toast_no_card_to_edit">No card available for editing.</string>
    <string name="label_translation">translation</string>
    <string name="label_delete">delete</string>
    <string name="lang_1">language 1</string>
    <string name="lang_2">language 2</string>
    <string name="label_select_dict">select dictionary</string>
    <string name="label_ok">ok</string>
    <string name="label_dict">dictionary</string>
    <string name="name">name</string>
    <string name="label_words">words</string>
    <string name="label_to_list">to list</string>
    <string name="label_new">new word</string>
    <string name="label_list">dictionary list</string>
    <string name="label_box">box</string>
    <string name="label_solution">solution</string>
    <string name="label_status">status</string>
    <string name="label_check">check</string>
    <string name="string_ett_worte">ett words</string>
    <string name="string_en_worte">en words</string>
    <string name="label_next">next</string>
    <string name="label_back">back</string>
    <string name="label_edit">edit</string>
    <string name="menu_list">list</string>
    <string name="menu_test">test</string>
    <string name="menu_export">export</string>
    <string name="menu_new">new</string>
    <string name="menu_new_capital">new</string>
    <string name="menu_search">search</string>
    <string name="menu_delete_search">delete search</string>
    <string name="menu_training">training</string>
    <string name="menu_import">import</string>
    <string name="act_word">word</string>
    <string name="act_dict">dictionary</string>
    <string name="act_listdict">dictionary list</string>
    <string name="act_test">Test</string>
    <string name="act_box">Box</string>
    <string name="act_lists">Dynamic lists</string>
    <string name="label_boxes">boxes</string>
    <string name="label_nrboxes">number of boxes</string>
    <string name="alert_save_title">save changes</string>
    <string name="github_link">https://github.com/CarstenKarbach/VoBox</string>
    <string name="info">info</string>
    <string name="label_translate">translate</string>
    <string name="translation_header">Translation:</string>
    <string name="label_translate_next">next</string>
    <string name="label_translate_back">back</string>
    <string name="no_translation_found">No translation found</string>
    <string name="no_network">No internet connection</string>
</resources>