<!-- 
	VoBox
    Copyright (C) 2019  Carsten Karbach
    
    Contact by mail carstenkarbach@gmx.de

    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation; either version 2 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License along
    with this program; if not, write to the Free Software Foundation, Inc.,
    51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/dict_edit"
        android:title="@string/label_edit"/>

    <item
        android:id="@+id/dict_export"
        android:title="@string/menu_export"/>

    <item
        android:id="@+id/dict_import"
        android:title="@string/menu_import"/>

    <item
        android:id="@+id/dict_delete"
        android:title="@string/label_delete"/>

    <item
        android:id="@+id/dict_new"
        android:title="@string/menu_new"/>
</menu>