<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:orientation="vertical"
        android:id="@+id/cardframe"
        >

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:weightSum="100"
            android:padding="8dp"
            >
            <ImageView
                android:src="@drawable/flag_german"
                android:scaleType="fitCenter"
                android:layout_weight="20"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/flag1"
                />
            <EditText
                android:id="@+id/lang1_text"
                android:layout_weight="80"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:imeOptions="actionDone"
                android:singleLine="true"
                />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:weightSum="100"
            android:padding="8dp"
            >
            <ImageView
                android:src="@drawable/flag_swedish"
                android:scaleType="fitCenter"
                android:layout_weight="20"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/flag2"
                />
            <EditText
                android:id="@+id/lang2_text"
                android:layout_weight="80"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/label_translation"
                android:imeOptions="actionDone"
                android:singleLine="true"
                />
        </TableRow>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@id/cardframe"
        android:id="@+id/button_frame"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            android:text="@string/label_save"
            style="@style/BlueButton"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            android:text="@string/label_delete"
            android:visibility="gone"
            style="@style/BlueButton"
            />
    </LinearLayout>

</RelativeLayout>

</ScrollView>